[tool.poetry]
name = "oop-principles"
version = "0.1.0"
description = "OOP Principles implemented with Python"
authors = ["goldenrati0 <tahmid.choyon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
